# src/main/kotlin/com/wutsi/like/model/CreateLikeRequest.kt
@@ -1,5 +1,6 @@
 package com.wutsi.like.model
 
+import java.time.OffsetDateTime
 import javax.validation.constraints.NotBlank
 import kotlin.Long
 import kotlin.String
@@ -8,5 +9,6 @@ public data class CreateLikeRequest(
     @get:NotBlank
     public val canonicalUrl: String = "",
     public val deviceUUID: String? = null,
-    public val userId: Long? = null
+    public val userId: Long? = null,
+    public val likeDateTime: OffsetDateTime? = null
 )
